# uv-github-action-demo

./: LICENSE  README.md  pyproject.toml
.github/workflows/: validate.yaml
src/demo_python_package/: __main__.py  git_utils.py
tests/: test_git_utils.py
