[project]
name = "demo-python-package"
version = "0.1.0"
description = "Demo of UV + GitHub Actions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_python_package"]
